Fix spacing around remove button

--- a/public/styles/site/synbiohub.less
+++ b/public/styles/site/synbiohub.less
@@ -13,6 +13,14 @@ a {
     color: @baseColor;
 }
 
+.fakelink {
+    margin: 0; 
+    padding: 0; 
+    border: none; 
+    color: @baseColor; 
+    background-color: transparent; 
+}
+
 .home-bg {
     background: #2C3E50;
     width: 100%;
